--- a/src/components/QuestionItem/QuestionItem.css
+++ b/src/components/QuestionItem/QuestionItem.css
@@ -9,6 +9,12 @@
     padding: 1rem;
 }
 
+@media (max-width: 768px) {
+    .question-item {
+        width: 100vw;
+    }
+}
+
 .question-header {
     padding: 1rem;
     cursor: pointer;
@@ -123,11 +129,19 @@
 }
 
 .difficulty-level {
+    font-size: 16px;
     font-weight: 600;
     color: #6b7280;
     position: absolute;
     top: -10px;
     left: 0;
+}
+
+@media (max-width: 768px) {
+    .difficulty-level {
+        top: -20px;
+        font-size: 12px;
+    }
 }
 
 .question-answer-text{
